fixed profile pic alignment

--- a/assets/style.css
+++ b/assets/style.css
@@ -45,6 +45,7 @@ header nav a:visited {
     color: darkgray
 }
 
+
 main {
     background-color: #BBD7E5;
 }
@@ -58,15 +59,15 @@ main {
     height: 300px;
     width: 100%;
     display: flex;
-    flex-flow: row nowrap;
+    flex-direction: row;
+    align-items: center;
 }
 
 #header-image img {
     max-height: 200px;
     max-width: 200px;
+    flex: 0 2 0;
     padding-left: 30px;
-    padding-top: 30px;
-    flex: 1 .25 1;
 }
 
 /* about me section: flex container */
@@ -93,40 +94,19 @@ main {
 #work article {
     display: flex;
     flex-flow: row wrap;
-    flex: 1 1 0;
-    justify-content: space-around;
+    flex: 0 1 0;
 }
 
-/* ??pics don't resize properly */
-.no-grow {
-    height: 300px;
-    width: 400px;
+.project-thumbnail {
     margin: 10px;
-    flex: 1 0 0;
+    flex: 1 2 0;
     border: 2px solid #3B4140;
-}
-
-#grow {
-    height: 600px;
-    width: 800px;
-    margin: 10px;
-    border: 2px solid #3B4140;
-    flex: 1 0 0;
 }
 
 #work img:hover {
     filter: saturate(.4);
     border: 2px solid #3b414066;
     cursor: pointer;
-}
-
-#work img:hover::after {
-    content: "hello!";
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    color: #FFF;
-    background-color: blue;
 }
 
 
@@ -152,6 +132,7 @@ main {
     padding: 0px 50px;
 }
 
+/* ??how to get footer to grow with size of page */
 footer {
     background-color: #3B4140;
     color: ivory;
